# docs/swagger.json
@@ -11,6 +11,40 @@
         "version": "1.0"
     },
     "paths": {
+        "/registry": {
+            "post": {
+                "description": "create new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "create new user",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
+            }
+        },
         "/report/get_all": {
             "get": {
                 "description": "return all report from database",
@@ -30,6 +64,9 @@
         }
     },
     "definitions": {
+        "models.User": {
+            "type": "object"
+        },
         "responses.BaseResponse": {
             "type": "object",
             "properties": {
